<resources>
    <string name="app_name" translatable="false">AI Draw</string>
    <string name="create">Create</string>
    <string name="start_now">Start Now!</string>
    <string name="position_prompt">Position Prompt</string>
    <string name="negation_prompt">Negation Prompt</string>
    <string name="position_hint">Position Prompt(请输入正面关键词)</string>
    <string name="negation_hint">Negation Prompt(请输入反面关键词)</string>
    <string name="text_2_image_title">Text To Image</string>
    <string name="image_2_image_title">Image To Image</string>
    <string name="control_net">controlNet</string>
    <string name="setting_title">Setting</string>
    <string name="hd_repair">HD Repair(高清修复 , 从512x512调整到1024x1024)</string>
    <string name="face_repair">Face Repair(面部修复)</string>
    <string name="submit">Submit</string>
    <string name="submit_tip">The configuration takes effect after submission(配置在提交之后生效)</string>
    <string name="hide_submit_tip">click me no more prompt(点我不再提示)</string>
    <string name="width">Width :</string>
    <string name="height">Height :</string>
    <string name="step">Steps :</string>
    <string name="scale">Scale :</string>
    <string name="sampler">Sampler :</string>
    <string name="model">Model :</string>
    <string name="denoising">Denoising :</string>
    <string name="select_sampler">Select Sampler</string>
    <string name="select_model">Select Model</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="initializing">Initializing...</string>
    <string name="model_refresh_success">Stable Diffusion model refreshed successfully</string>
    <string name="input_position_tip">Please Input Position Prompt</string>
    <string name="input_negation_tip">Please Input Negation Prompt</string>
    <string name="change_success">Configuration modified successfully</string>
    <string name="add_image">Add Image</string>
    <string name="image_no_exist">Image Does Not Exist</string>
    <string name="clip_reverse_prompt">CLIP Reverse Prompt</string>
    <string name="deepbooru_reverse_prompt">DeepBooru Reverse Prompt</string>
    <string name="please_select_image">Please Select Image</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="download">Download</string>
    <string name="save_success">Saved successfully</string>
    <string name="network_error">Network Error</string>
    <string name="share">Share</string>
    <string name="download_tip">Can\'t Download Now</string>
    <string name="share_tip">Can\'t Share Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="login_1">Login</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="username">Your username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Your Email(optional)</string>
    <string name="tellphone">Your Tellphone(optional)</string>
    <string name="username_tip">Username can not be empty</string>
    <string name="password_tip">Password can not be empty</string>
    <string name="confirm_password_tip">Password confirmation cannot be empty</string>
    <string name="password_confirm_password_tip">The password and confirm password need to be the same</string>
    <string name="sign_up_success">registration success</string>
    <string name="login_success">Login successful</string>
    <string name="init_app_success">Application initialized successfully</string>
    <string name="username_password_error">Username or password is incorrect</string>
    <string name="get_image_information">Get Image Information</string>
    <string name="preprocessing">Preprocessing</string>
    <string name="leres">LeRes</string>
    <string name="canny">Canny</string>
    <string name="seg">Seg</string>
    <string name="leres_image">LeRes Image</string>
    <string name="canny_image">Canny Image</string>
    <string name="seg_image">Seg Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="get_image_information_tip">Tip : Put in the picture of Text to Image or Image to Image</string>
    <string name="get_image_information_toast">Please put in the picture of Text to Image or Image to Image</string>
    <string name="steps_heading">Steps</string>
    <!-- 用于获取信息弹窗 -->
    <string name="sampler_heading">Sampler</string>
    <string name="cfg_scale_heading">CFG scale</string>
    <string name="seed_heading">Seed</string>
    <string name="width_heading">Width</string>
    <string name="height_heading">Height</string>
    <string name="model_hash_heading">Model hash</string>
    <string name="model_heading">Model</string>
    <string name="clip_skip_heading">Clip skip</string>
    <string name="ensd_heading">ENSD</string>
    <string name="upscale_upscaler_heading">Upscale upscaler</string>
    <string name="sd_upscale_overlap_heading">SD upscale overlap</string>
    <string name="denoising_strength_heading">Denoising strength</string>

</resources>