<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_sign_up_bottom_dialog_shape">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/login_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/eagle_lake_regular"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login">
        </TextView>

        <FrameLayout
            android:id="@+id/login_username_layout"
            android:layout_marginTop="40dp"
            android:padding="2dp"
            android:background="@drawable/login_sign_up_edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:hint="@string/username"
                android:textColorHint="@color/grey_9099"
                android:id="@+id/login_username"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_30dp_shape">
            </EditText>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/login_password_layout"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:background="@drawable/login_sign_up_edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="@color/black"
                android:lines="1"
                android:maxLines="1"
                android:inputType="text|textPassword"
                android:imeOptions="actionDone"
                android:textColorHint="@color/grey_9099"
                android:hint="@string/password"
                android:id="@+id/login_password"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_30dp_shape">
            </EditText>
        </FrameLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_30dp_shape"
            android:text="@string/login_1"
            android:paddingVertical="16dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp">
        </Button>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/not_have_account">
            </TextView>

            <TextView
                android:id="@+id/login_sign_up_text"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/sign_up"
                android:textSize="17sp">
            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>