<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_2_image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_2_image_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/eagle_lake_regular">
    </TextView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_2_image_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/text_2_image_position_prompt_layout"
        android:padding="2dp">

        <EditText
            android:id="@+id/text_2_image_position_prompt_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:lines="4"
            android:maxLines="4"
            android:hint="@string/position_hint"
            android:gravity="start|top"
            android:padding="8dp"
            android:background="@drawable/shape_input_bg">
        </EditText>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_2_image_position_prompt_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/text_2_image_negation_prompt_layout"
        android:padding="2dp">

        <EditText
            android:id="@+id/text_2_image_negation_prompt_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:lines="4"
            android:maxLines="4"
            android:hint="@string/negation_hint"
            android:gravity="start|top"
            android:padding="8dp"
            android:background="@drawable/shape_input_bg">
        </EditText>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/text_2_image_create_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintTop_toBottomOf="@id/text_2_image_negation_prompt_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:background="@drawable/shape_button"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp">
    </Button>




</androidx.constraintlayout.widget.ConstraintLayout>