<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/image_2_image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_2_image_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/eagle_lake_regular">
    </TextView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_2_image_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_image_layout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/dash_bg">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/add_icon">
                    </ImageView>
                    
                    <TextView
                        android:textColor="@color/grey_b8bd"
                        android:layout_marginTop="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_image">
                    </TextView>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/add_image"
                    android:layout_width="0dp"
                    app:shapeAppearanceOverlay="@style/image_shape"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                </com.google.android.material.imageview.ShapeableImageView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/clip_reverse_prompt_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:text="@string/clip_reverse_prompt"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textAllCaps="false">
                </Button>

                <Button
                    android:id="@+id/deepbooru_reverse_prompt_button"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:text="@string/deepbooru_reverse_prompt"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textAllCaps="false">
                </Button>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/image_2_image_position_prompt_layout"
                android:padding="2dp">

                <EditText
                    android:id="@+id/image_2_image_position_prompt_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:lines="4"
                    android:maxLines="4"
                    android:hint="@string/position_hint"
                    android:gravity="start|top"
                    android:padding="8dp"
                    android:background="@drawable/shape_input_bg">
                </EditText>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image_2_image_negation_prompt_layout"
                android:padding="2dp">

                <EditText
                    android:id="@+id/image_2_image_negation_prompt_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:lines="4"
                    android:maxLines="4"
                    android:hint="@string/negation_hint"
                    android:gravity="start|top"
                    android:padding="8dp"
                    android:background="@drawable/shape_input_bg">
                </EditText>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/image_2_image_create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textAllCaps="false"
                android:enabled="false"
                android:background="@drawable/create_button_bg"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:paddingVertical="10dp"
                android:layout_marginBottom="20dp">
            </Button>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>