<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_sign_up_bottom_dialog_shape">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_up_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/sign_up_title"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/eagle_lake_regular"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up">
        </TextView>

        <FrameLayout
            android:id="@+id/sign_up_username_layout"
            android:layout_marginTop="40dp"
            android:padding="2dp"
            android:background="@drawable/login_sign_up_edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/sign_up_username"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:hint="@string/username"
                android:textColorHint="@color/grey_9099"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_30dp_shape">
            </EditText>
        </FrameLayout>

       <FrameLayout
           android:id="@+id/sign_up_password_layout"
           android:layout_marginTop="20dp"
           android:padding="2dp"
           android:background="@drawable/login_sign_up_edittext_bg"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/sign_up_password"
               android:inputType="textPassword"
               android:maxLines="1"
               android:lines="1"
               android:textColor="@color/black"
               android:imeOptions="actionNext"
               android:hint="@string/password"
               android:textColorHint="@color/grey_9099"
               android:textSize="17sp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/edittext_30dp_shape">
           </EditText>
       </FrameLayout>

        <FrameLayout
            android:id="@+id/sign_up_confirm_password_layout"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:background="@drawable/login_sign_up_edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/sign_up_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:hint="@string/password"
                android:textColorHint="@color/grey_9099"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_30dp_shape">
            </EditText>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/sign_up_email_layout"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:background="@drawable/login_sign_up_edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/sign_up_email"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:hint="@string/email"
                android:textColorHint="@color/grey_9099"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_30dp_shape">
            </EditText>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/sign_up_phone_layout"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:background="@drawable/login_sign_up_edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/sign_up_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/black"
                android:imeOptions="actionDone"
                android:hint="@string/tellphone"
                android:textColorHint="@color/grey_9099"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_30dp_shape">
            </EditText>
        </FrameLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:paddingVertical="16dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_30dp_shape"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:textSize="17sp">
        </Button>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>